[package]
name = "aoc2"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.42"
clap = "2.33.3"
console = "0.14.1"
indexmap = "1.7.0"
lazy_static = "1.4.0"
rand = "0.8.4"
rayon = "1.5.1"

[build-dependencies]
anyhow = "1.0.42"
rustversion = "1.0.5"
vergen = "5.1.13"

[dev-dependencies]
regex = "1.5.4"
