[workspace]
resolver = "2"

members = ["aoc2-bin", "aoc2-di", "aoc2-ft", "aoc2-sol"]

[workspace.dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.36", features = ["derive"] }
config = "0.15.11"
console = "0.15.11"
dirs2 = "3.0.1"
getset = "0.1.5"
lazy_static = "1.5.0"
rand = "0.9.0"
regex = "1.11.1"
rustversion = "1.0.20"
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.12"
tracing = { version = "0.1.41", features = [
    "max_level_trace",
    "release_max_level_info",
] }
tracing-subscriber = { version = "0.3.19", features = [
    "env-filter",
    "fmt",
    "time",
] }
tracing-subscriber-init = { version = "0.1.3", features = ["tstime"] }
vergen-gix = { version = "1.0.9", features = ["build", "cargo", "rustc", "si"] }
vergen-pretty = { version = "1.0.1", features = ["color", "trace"] }
