[package]
name = "aoc2"
version = "0.1.0"
edition = "2021"

[features]
intcode_debug = ["aoc2-sol/intcode_debug"]

[dependencies]
anyhow = { workspace = true }
aoc2-sol = { path = "../aoc2-sol" }
clap.workspace = true
config = "0.14.1"
console.workspace = true
dirs2 = "3.0.1"
getset = { workspace = true }
lazy_static = { workspace = true }
rand = "0.8.5"
serde = { version = "1.0.216", features = ["derive"] }
thiserror = "2.0.6"
tracing = { version = "0.1.41", features = ["max_level_trace", "release_max_level_info"] }
tracing-subscriber = { version = "0.3.19", features = [
  "env-filter",
  "fmt",
  "time",
] }
tracing-subscriber-init = { version = "0.1.3", features = ["tstime"] }
vergen-pretty = { version = "0.3.6", features = ["color", "trace"] }

[build-dependencies]
anyhow = { workspace = true }
rustversion = { workspace = true }
vergen-gix = { version = "1.0.3", features = [
  "build",
  "cargo",
  "rustc",
  "si",
] }
