[package]
name = "aoc2"
version = "0.1.0"
edition = "2024"

[features]
intcode_debug = ["aoc2-sol/intcode_debug"]

[dependencies]
anyhow.workspace = true
aoc2-sol = { path = "../aoc2-sol" }
clap.workspace = true
config.workspace = true
console.workspace = true
dirs2.workspace = true
getset.workspace = true
rand.workspace = true
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-subscriber-init.workspace = true
vergen-pretty.workspace = true

[build-dependencies]
anyhow.workspace = true
rustversion.workspace = true
vergen-gix.workspace = true
