[package]
name = "aoc2-di"
version = "0.1.0"
edition = "2024"

[features]
unstable = []

[dependencies]
anyhow.workspace = true
chrono = "0.4.40"
chrono-tz = "0.10.3"
clap.workspace = true
config = { workspace = true, features = ["toml"] }
console.workspace = true
cookie = "0.18.1"
dirs2.workspace = true
getset.workspace = true
rand.workspace = true
reqwest = { version = "0.12.15", features = ["cookies"] }
serde.workspace = true
thiserror.workspace = true
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread", "time"] }
tracing = { workspace = true, features = [
    "attributes",
    "max_level_trace",
    "release_max_level_info",
] }
tracing-appender = "0.2.3"
tracing-subscriber.workspace = true
tracing-subscriber-init.workspace = true
vergen-pretty.workspace = true

[build-dependencies]
anyhow.workspace = true
rustversion.workspace = true
vergen-gix.workspace = true
