[package]
name = "aoc2-sol"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
unstable = []
intcode_debug = ["bincode", "serde", "bnum/serde"]
bincode = ["dep:bincode"]

[dependencies]
anyhow.workspace = true
bitvec = "1.0.1"
bincode = { version = "1.3.3", optional = true }
bnum = { version = "0.12.0" }
bytecount = "0.6.8"
cfg-if = "1.0.0"
console.workspace = true
crossterm = "0.28.1"
getset.workspace = true
indexmap = "2.7.0"
itertools = "0.14.0"
lazy_static.workspace = true
md-5 = "0.10.6"
memoize = "0.4.2"
ndarray = { version = "0.16.1", features = ["rayon"] }
pathfinding = "4.13.0"
petgraph = "0.6.5"
primal = "0.3.3"
rayon = "1.10.0"
regex.workspace = true
serde = { workspace = true, optional = true }
serde_json = "1.0.134"
sliding_windows = "3.0.0"
thiserror.workspace = true
time = "0.3.37"
tracing = { workspace = true, features = [
    "max_level_trace",
    "release_max_level_debug",
] }

[build-dependencies]
rustversion.workspace = true
