[package]
name = "aoc2-sol"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
unstable = []
intcode_debug = ["bincode", "serde", "bnum/serde"]
bincode = ["dep:bincode"]

[dependencies]
anyhow.workspace = true
bitvec = "1.0.1"
bincode = { version = "1.3.3", optional = true }
bnum = { version = "0.13.0" }
bytecount = "0.6.8"
cfg-if = "1.0.0"
console.workspace = true
crossterm = "0.29.0"
getset.workspace = true
indexmap = "2.9.0"
itertools = "0.14.0"
md-5 = "0.10.6"
memoize = "0.5.1"
ndarray = { version = "0.16.1", features = ["rayon"] }
pathfinding = "4.14.0"
petgraph = "0.8.1"
primal = "0.3.3"
rayon = "1.10.0"
regex.workspace = true
serde = { workspace = true, optional = true }
serde_json = "1.0.140"
sliding_windows = "3.0.0"
thiserror.workspace = true
time = "0.3.41"
tracing = { workspace = true, features = [
    "max_level_trace",
    "release_max_level_debug",
] }
hashbrown = "0.15.2"

[build-dependencies]
rustversion.workspace = true
